--- a/requirements.txt
+++ b/requirements.txt
@@ -8,3 +8,8 @@ openpyxl==3.1.2
 python-jose==3.3.0
 werkzeug==3.0.1
 email-validator==2.2.0
+gunicorn==21.2.0
+psycopg2-binary==2.9.9
+SQLAlchemy==2.0.25
+alembic==1.13.1
+Flask-Migrate==4.0.5
